--- a/TFG_Projects_APP_Frontend/Pages/Tasks/TaskBoardPage.xaml
+++ b/TFG_Projects_APP_Frontend/Pages/Tasks/TaskBoardPage.xaml
@@ -1,18 +1,23 @@
 <?xml version="1.0" encoding="utf-8" ?>
-<ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
-             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="TFG_Projects_APP_Frontend.Pages.Tasks.TaskBoardPage"
-             xmlns:models="clr-namespace:TFG_Projects_APP_Frontend.Entities.Models"
-             xmlns:dtos="clr-namespace:TFG_Projects_APP_Frontend.Entities.Dtos.Users"
-             xmlns:pageModels="clr-namespace:TFG_Projects_APP_Frontend.PageModels"
-             x:DataType="pageModels:Tasks.TaskBoardPageModel"
-             Title="TaskBoardPage"
-             Shell.NavBarIsVisible="False"
-             NavigationPage.HasNavigationBar="False">
+<ContentPage
+    x:Class="TFG_Projects_APP_Frontend.Pages.Tasks.TaskBoardPage"
+    xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
+    xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+    xmlns:dtos="clr-namespace:TFG_Projects_APP_Frontend.Entities.Dtos.Users"
+    xmlns:models="clr-namespace:TFG_Projects_APP_Frontend.Entities.Models"
+    xmlns:pageModels="clr-namespace:TFG_Projects_APP_Frontend.PageModels"
+    Title="TaskBoardPage"
+    x:DataType="pageModels:Tasks.TaskBoardPageModel"
+    NavigationPage.HasNavigationBar="False"
+    Shell.NavBarIsVisible="False">
     <VerticalStackLayout Padding="20">
         <Button Command="{Binding CreateTaskSectionCommand}" Text="Create Task Section" />
         <StackLayout Orientation="Horizontal" Spacing="20">
-            <CollectionView ItemsSource="{Binding TaskSections}">
+            <CollectionView
+                ItemsSource="{Binding TaskSections}"
+                SelectedItem="{Binding SelectedTaskSection}"
+                SelectionChangedCommand="{Binding TaskSectionSelectedCommand}"
+                SelectionMode="Single">
                 <CollectionView.ItemsLayout>
                     <GridItemsLayout Orientation="Horizontal" Span="1" />
                 </CollectionView.ItemsLayout>
@@ -20,7 +25,18 @@
                     <DataTemplate x:DataType="models:TaskSection">
                         <Border Padding="5">
                             <StackLayout Spacing="5">
-                                <Label Text="{Binding Title}" />
+                                <StackLayout Orientation="Horizontal">
+                                    <Button
+                                        Command="{Binding Source={RelativeSource AncestorType={x:Type pageModels:Tasks.TaskBoardPageModel}}, Path=MoveSectionLeftCommand}"
+                                        CommandParameter="{Binding .}"
+                                        Text="&lt;" />
+                                    <Label Text="{Binding Title}" />
+                                    <Button
+                                        Command="{Binding Source={RelativeSource AncestorType={x:Type pageModels:Tasks.TaskBoardPageModel}}, Path=MoveSectionRightCommand}"
+                                        CommandParameter="{Binding .}"
+                                        Text="&gt;" />
+                                </StackLayout>
+
                                 <Button
                                     Command="{Binding Source={RelativeSource AncestorType={x:Type pageModels:Tasks.TaskBoardPageModel}}, Path=TaskCreateCommand}"
                                     CommandParameter="{Binding .}"
@@ -29,7 +45,10 @@
                                     <ListView.ItemTemplate>
                                         <DataTemplate x:DataType="models:ProjectTask">
                                             <ViewCell>
-                                                <Border Padding="10" Margin="5" BackgroundColor="#f0f0f0">
+                                                <Border
+                                                    Margin="5"
+                                                    Padding="10"
+                                                    BackgroundColor="#f0f0f0">
                                                     <StackLayout>
                                                         <Label Text="{Binding Title}" />
                                                         <Label Text="{Binding Description}" />
@@ -42,8 +61,16 @@
                             </StackLayout>
                         </Border>
                     </DataTemplate>
-                    </CollectionView.ItemTemplate>
+                </CollectionView.ItemTemplate>
             </CollectionView>
+
         </StackLayout>
+        <ActivityIndicator
+            HeightRequest="50"
+            HorizontalOptions="Center"
+            IsRunning="{Binding IsLoading}"
+            IsVisible="{Binding IsLoading}"
+            VerticalOptions="Center"
+            WidthRequest="50" />
     </VerticalStackLayout>
 </ContentPage>
